--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,9 @@
     <string name="app_name">Earthquake Witness</string>
     <string name="near_the">Near the</string>
 
-    <!-- Text to display in the list when there are no earthquakes [CHAR LIMIT=NONE] -->
+    <!-- Text to display in the list when there are no earthquakes -->
     <string name="no_earthquakes">No earthquakes found.</string>
 
-    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
+    <!-- Error message when there is no internet connectivity -->
     <string name="no_internet_connection">No internet connection.</string>
 </resources>
