--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,17 @@
     <string name="settings_min_magnitude_key">min_magnitude</string>
     <string name="settings_min_magnitude_default">6</string>
 
+    <!-- Strings For Order-by Preference -->
+    <string name="settings_order_by_label">Order By</string>
+    <string name="settings_order_by_key">order_by</string>
+    <string name="settings_order_by_default">@string/settings_order_by_magnitude_value</string>
+
+    <!-- Label for order-by magnitude option -->
+    <string name="settings_order_by_magnitude_label">Magnitude</string>
+    <string name="settings_order_by_magnitude_value">magnitude</string>
+
+    <!-- Label for order-by most recent option -->
+    <string name="settings_order_by_most_recent_label">Most Recent</string>
+    <string name="settings_order_by_most_recent_value">time</string>
+
 </resources>
